fixed hr alignment on About page underneath 'we have worked for' and overlay extending past the work thumbnails on Work page

--- a/wp-content/plugins/awesome-filterable-portfolio/css/afp-style.css
+++ b/wp-content/plugins/awesome-filterable-portfolio/css/afp-style.css
@@ -57,6 +57,7 @@ li.afp-single-item::before {
 
 li.afp-single-item:hover::before {
 	background: rgba(65, 61, 59, .5);
+  max-height: 266px;
 }
 
 li.afp-single-item>a.colorbox {
