--- a/wp-content/themes/handmade_theme/style.css
+++ b/wp-content/themes/handmade_theme/style.css
@@ -133,12 +133,16 @@ ins {
 	text-decoration: none;
 }
 hr {
+	display: block;
+	margin-right: auto;
+	margin-left: auto;
 	background-color: #ccc;
 	border: 0;
 	height: 1px;
-width: 125px;
-text-align: center;
-
+	width: 125px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
